--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>Tejaswini's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,9 +16,8 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Stellar</h1>
-						<p>Just another free, fully responsive site template<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<h1>Hi, I'm Tejaswini!</h1>
+						<p>Analytical Professional with a Master's degree in Management Information Systems<br /></p>
 					</header>
 
 				<!-- Nav -->
@@ -138,28 +137,27 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
+							<h2>My Graduation Quote</h2>
+							<p>“Enjoy the butterflies, nerves, pressure, and being naïve. Enjoy making a name for yourself and meeting some great people. Stay focused and don't forget what got you here.”</br>
+							<i> ~ Daniel Ricciardo</i></p>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Hire Me</h2>
 							<dl class="alt">
 								<dt>Address</dt>
-								<dd>United States of America&bull; Open to Relocation</dd>
+								<dd>United States of America  &bull;  
+									Open to Relocation</dd>
 								<dt>Phone</dt>
 								<dd>+1 (520) 535 6897</dd>
 								<dt>Email</dt>
-								<dd><a href="#">tejaswini@arizona.edu</a></dd>
+								<dd><a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=tejaswini@arizona.edu" target="_blank">tejaswini@arizona.edu</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+								<li><a href="https://www.linkedin.com/in/tejaswini-kshirsagar/" class="icon brands fa-linkedin alt" target="_blank"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon brands fa-github alt" target="_blank"><span class="label">GitHub</span></a></li>
+								<li><a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=tejaswini@arizona.edu" class="icon solid fa-envelope alt" target="_blank"><span class="label">Gmail</span></a></li>
+								<li><a href="https://public.tableau.com/app/profile/tejaswini.kshirsagar/vizzes" class="icon solid fa-chart-line alt" target="_blank"><span class="label">Tableau</span></a></li>
+
 							</ul>
 						</section>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
