--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Hi, I'm Tejaswini!</h1>
-						<p>Analytical Professional with a Master's degree in Management Information Systems<br /></p>
+						<p>Analytics Professional with a Master's degree in Management Information Systems<br /></p>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
+							<li><a href="#first">Projects</a></li>
 							<li><a href="#second">Second Section</a></li>
 							<li><a href="#cta">Get Started</a></li>
 						</ul>
@@ -40,22 +40,40 @@
 										<header class="major">
 											<h2>Tejaswini</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
+										<p>Analytics professional with 2+ years of experience in data analysis, 
+											business intelligence, and project management. With a Master's degree
+											in Management Information Systems, I'm passionate about leveraging data-driven insights to support business success.</p>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/farewell.jpg" alt="" /></span>
 								</div>
 							</section>
 
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Projects</h2>
 								</header>
+								<ul class="features">
+									<li style="padding-left: 100px;">
+										<div style= "display: inline-block; width: 225px; height: 225px; 
+										border-radius: 50%; background-color: white; display: flex; align-items: center; 
+										justify-content: center; border: 1px solid #ccc; ">
+										<span class="image"><img src="images/homedepot.png" alt="" width = "360" height = auto /></span></div>
+										<br><h3>Home Depot</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+									</li>
+									<li>
+										<span class="icon major style3 fa-copy"></span>
+										<h3>Amed sed feugiat</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+									</li>
+									<li>
+										<span class="icon major style5 fa-gem"></span>
+										<h3>Dolor nullam</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+									</li>
+								</ul>
+
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
@@ -73,11 +91,7 @@
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
+								
 							</section>
 
 						<!-- Second Section -->
@@ -160,7 +174,7 @@
 
 							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; HTML5 UP. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
