--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
 			</section>
 
 			<!-- Work Experience -->
-			<section id="second" class="main special">
+			<section id="first" class="main special">
 				<header class="major">
 					<h2>Work Experience</h2>
 					<p>Expertise in Data Analysis, Data Visualization, Project Management, Business 
-						<br> Intelligence and Requirement Gathering for Decision Support.</p>
+						<br/> Intelligence and Requirement Gathering for Decision Support.</p>
 				</header>
-				<ul class="statistics"> <br>
+				
+				<ul class="statistics">
 					<li class="style1">
 						<span class="icon solid fa-suitcase"></span>
 						<strong>2 + </strong> Years' Experience
@@ -77,8 +78,8 @@
 					<li class="style4">
 						<span class="icon solid fa-laptop"></span>
 						<strong>10 +</strong> Tools Mastered
-					</li>
 				</ul>
+
 				<p class="content">Throughout my professional journey, I have cultivated a comprehensive skill set in
 					data analysis, business intelligence, and project management, demonstrated across various impactful
 					roles. At LTIMindtree, I excelled in using SQL, Python, Power BI and SSIS to manage complex datasets
@@ -94,25 +95,25 @@
 					strategic initiatives to diverse stakeholders.</p>
 				<footer class="major">
 					<ul class="actions special">
-						<li><a href="generic.html" class="button">Learn More</a></li>
+						<li><a href="work.html" class="button">Learn More</a></li>
 					</ul>
 				</footer>
 			</section>
 
 
 			<!-- Projects -->
-			<section id="first" class="main special">
+			<section id="second" class="main special">
 				<header class="major">
 					<h2>Projects</h2>
 				</header>
 				<ul class="features">
 
 					<li>
-						<div style="display: inline-block; text-align: center; margin: 20px auto">
-							<div style="width: 270px; height: 270px; border-radius: 50%; background-color: white;
-											overflow: hidden; display: flex; align-items: center; justify-content: center; margin: 0 auto; ">
+						<div class="project-outer">
+							<div class="project-inner">
+								<a href="education.html" target="_blank">
 								<span class="image"><img src="images/homedepot.png" alt="" width="550px"
-										height=auto /></span>
+										height=auto /></span></a>
 							</div> <br>
 							<h3>Amed sed feugiat</h3>
 							<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros
@@ -121,12 +122,11 @@
 					</li>
 
 					<li>
-						<div style="display: inline-block; text-align: center; margin: 20px auto">
-							<div style="width: 270px; height: 270px; border-radius: 50%; background-color: white;
-											overflow: hidden; display: flex; align-items: center; justify-content: center;
-											margin: 0 auto; ">
-								<span class="image"><img src="images/airplane.jpg" alt="" width="465px"
-										height=auto /></span>
+						<div class="project-outer">
+							<div class="project-inner">
+								<a href="education.html" target="_blank">
+								<span class="image"><img src="images/airplane.jpg" alt="" width="485px"
+									height=auto  /></span></a>
 							</div> <br>
 							<h3>Amed sed feugiat</h3>
 							<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros
@@ -135,12 +135,11 @@
 					</li>
 
 					<li>
-						<div style="display: inline-block; text-align: center; margin: 20px auto">
-							<div style="width: 270px; height: 270px; border-radius: 50%; background-color: white;
-											overflow: hidden; display: flex; align-items: center; justify-content: center;
-											border: 3px solid #e1e1e1; margin: 0 auto; ">
+						<div class="project-outer">
+							<div class="project-inner">
+								<a href="education.html" target="_blank">
 								<span class="image"><img src="images/market.jpg" alt="" width="400px"
-										height=auto /></span>
+										height=auto /></span></a>
 							</div> <br>
 							<h3>Amed sed feugiat</h3>
 							<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros
@@ -149,12 +148,11 @@
 					</li>
 
 					<li>
-						<div style="display: inline-block; text-align: center; margin: 20px auto">
-							<div style="width: 270px; height: 270px; border-radius: 50%; background-color: white;
-											overflow: hidden; display: flex; align-items: center; justify-content: center;
-											border: 3px solid #e1e1e1; margin: 0 auto; ">
-								<span class="image"><img src="images/students.png" alt="" width="400px"
-										height=auto /></span>
+						<div class="project-outer">
+							<div class="project-inner">
+								<a href="education.html" target="_blank">
+								<span class="image"><img src="images/students.png" alt="" width="420px"
+									height=auto /></span></a>
 							</div> <br>
 							<h3>Amed sed feugiat</h3>
 							<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros
@@ -163,12 +161,11 @@
 					</li>
 
 					<li>
-						<div style="display: inline-block; text-align: center; margin: 20px auto">
-							<div style="width: 270px; height: 270px; border-radius: 50%; background-color: white;
-											overflow: hidden; display: flex; align-items: center; justify-content: center;
-											border: 3px solid #e1e1e1; margin: 0 auto; ">
-								<span class="image"><img src="images/classroom.jpg" alt="" width="400px"
-										height=auto /></span>
+						<div class="project-outer">
+							<div class="project-inner">
+								<a href="education.html" target="_blank">
+								<span class="image"><img src="images/classroom.jpg" alt="" width="425px"
+									height=auto /></span></a>
 							</div> <br>
 							<h3>Amed sed feugiat</h3>
 							<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros
@@ -184,14 +181,20 @@
 			<!-- Get Started -->
 			<section id="cta" class="main special">
 				<header class="major">
-					<h2>Congue imperdiet</h2>
-					<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-						posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+					<h2>Education & Certifications</h2>
 				</header>
+				<p>
+					<h2>Master of Science in Management Information Systems</h2>
+						University of Arizona  |  3.9 GPA
+				</p>
+
+				<p>
+					<h2>Bachelor of Engineering in Computer Engineering</h2>
+						University of Mumbai  | 3.5 GPA
+				</p>
 				<footer class="major">
 					<ul class="actions special">
-						<li><a href="generic.html" class="button primary">Get Started</a></li>
-						<li><a href="generic.html" class="button">Learn More</a></li>
+						<li><a href="education.html" class="button primary" target="_blank">Learn More</a></li>
 					</ul>
 				</footer>
 			</section>
