--- a/education.html
+++ b/education.html
@@ -28,7 +28,7 @@
             <!-- Content -->
             <section id="content" class="main">
                 <h2>Master's in Management Information Systems</h2>
-                <h4><strong>Eller Excellance Award Winner</strong></h4>
+                <h4><strong>Eller Excellence Award Winner</strong></h4>
                 <p><strong>Coursework:</strong> Enterprise Data Management (Database Management Systems), Business
                     Intelligence, Data
                     Mining, Data Visualization, Project Management, Strategic Communication, Information System Analysis
