--- a/index.html
+++ b/index.html
@@ -111,42 +111,39 @@
 					<li>
 						<div class="project-outer">
 							<div class="project-inner">
-								<a href="education.html" target="_blank">
+								<a href="https://github.com/tejaswini-1999/Home-Depot" target="_blank">
 								<span class="image"><img src="images/homedepot.png" alt="" width="550px"
 										height=auto /></span></a>
 							</div> <br>
-							<h3>Amed sed feugiat</h3>
-							<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros
-								sed consequat.</p>
+							<h3>Home Depot</h3>
+							<p>An Inventory Management System that optimizes stock tracking, sales analysis, and order processing using SQL, ER modelling, triggers, and procedures</p>
 						</div>
 					</li>
 
 					<li>
 						<div class="project-outer">
 							<div class="project-inner">
-								<a href="education.html" target="_blank">
+								<a href="https://github.com/tejaswini-1999/AeroBI" target="_blank">
 								<span class="image"><img src="images/airplane.jpg" alt="" width="485px"
 									height=auto  /></span></a>
 							</div> <br>
-							<h3>Amed sed feugiat</h3>
-							<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros
-								sed consequat.</p>
+							<h3>AeroBI</h3>
+							<p>Analyzes airline delays, cancellations, and customer sentiment using data warehousing, ETL, and visualization for operational efficiency insights.</p>
 						</div>
 					</li>
 
 					<li>
 						<div class="project-outer">
 							<div class="project-inner">
-								<a href="education.html" target="_blank">
+								<a href="https://github.com/tejaswini-1999/Customer-Segmentation" target="_blank">
 								<span class="image"><img src="images/market.jpg" alt="" width="400px"
 										height=auto /></span></a>
 							</div> <br>
-							<h3>Amed sed feugiat</h3>
-							<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros
-								sed consequat.</p>
+							<h3>Customer Segmentation</h3>
+							<p>Analyzes purchasing behavior using clustering and regression models, enabling targeted marketing and trend forecasting for businesses.</p>
 						</div>
 					</li>
-
+<!--
 					<li>
 						<div class="project-outer">
 							<div class="project-inner">
@@ -171,7 +168,7 @@
 							<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros
 								sed consequat.</p>
 						</div>
-					</li>
+					</li>-->
 
 				</ul>
 
