Removed education footer

--- a/education.html
+++ b/education.html
@@ -53,7 +53,7 @@
                     <li>Oracle Certified Associate, Java SE 8 Programmer - ORACLE University</li>
                     <li>Scrum Fundamentals Certified - SCRUMstudy</li>
                     <li><a href="https://www.coursera.org/account/accomplishments/verify/G5UY2ZKM4QWL"
-                            target="_blank">Networks and Deep Learning - deeplearning.ai</li>
+                            target="_blank">Networks and Deep Learning - deeplearning.ai</a></li>
 
                 </ul>
             </section>
