--- a/education.html
+++ b/education.html
@@ -47,9 +47,9 @@
                 <h2>Certifications</h2>
                 <ul>
                     <li><a href="https://www.credential.net/e3a2c947-c35d-491c-bb71-0ef9eb227933#acc.7HGQOAFw"
-                            target="_blank">Excel Collegiate Challenge Fall 2024 Certificate of Completion</li>
+                            target="_blank">Excel Collegiate Challenge Fall 2024 Certificate of Completion</a></li>
                     <li><a href="http://ude.my/UC-64e08733-a209-4666-935b-0920613c5e7b" target="_blank">Learning
-                            A-Z&trade; - Hands-On Python & R in Data Science - Udemy</li>
+                            A-Z&trade; - Hands-On Python & R in Data Science - Udemy</a></li>
                     <li>Oracle Certified Associate, Java SE 8 Programmer - ORACLE University</li>
                     <li>Scrum Fundamentals Certified - SCRUMstudy</li>
                     <li><a href="https://www.coursera.org/account/accomplishments/verify/G5UY2ZKM4QWL"
