minor formatting fixes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<li><a href="#intro" class="active">Introduction</a></li>
 				<li><a href="#first">Work Experience</a></li>
 				<li><a href="#second">Projects</a></li>
-				<li><a href="#cta">Get Started</a></li>
+				<li><a href="#cta">Education</a></li>
 			</ul>
 		</nav>
 
@@ -107,7 +107,7 @@
 						<div class="project-outer">
 							<div class="project-inner">
 								<a href="https://github.com/tejaswini-1999/Home-Depot" target="_blank">
-								<span class="image"><img src="images/homedepot.png" alt="" width="550px"
+								<span class="image"><img src="images/homedepot.png" alt="" width="500px"
 										height=auto /></span></a>
 							</div> <br>
 							<h3>Home Depot</h3>
@@ -123,7 +123,7 @@
 									height=auto  /></span></a>
 							</div> <br>
 							<h3>AeroBI</h3>
-							<p>Analyzes airline delays, cancellations, and customer sentiment using data warehousing, ETL, and visualization for operational efficiency insights.</p>
+							<p>Analyzes airline delays, cancellations, and customer sentiment using data warehousing, ETL, and visualization for operational efficiency insights</p>
 						</div>
 					</li>
 
@@ -135,7 +135,7 @@
 										height=auto /></span></a>
 							</div> <br>
 							<h3>Customer Segmentation</h3>
-							<p>Analyzes purchasing behavior using clustering and regression models, enabling targeted marketing and trend forecasting for businesses.</p>
+							<p>Analyzes purchasing behavior using clustering and regression models, enabling targeted marketing and trend forecasting for businesses</p>
 						</div>
 					</li>
 <!--
@@ -218,7 +218,7 @@
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/tejaswini-kshirsagar/" class="icon brands fa-linkedin alt"
 							target="_blank"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon brands fa-github alt" target="_blank"><span
+					<li><a href="https://github.com/tejaswini-1999" class="icon brands fa-github alt" target="_blank"><span
 								class="label">GitHub</span></a></li>
 					<li><a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=tejaswini@arizona.edu"
 							class="icon solid fa-envelope alt" target="_blank"><span class="label">Gmail</span></a></li>
