--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<header class="major">
 							<h2>A Little About Me</h2>
 						</header>
-						<p>Experienced Analyst with over 2 years of robust experience in data analysis, business
+						<p>Experienced Analyst with almost 3 years of robust experience in data analysis, business
 							intelligence, and project management. Holding a Master's degree in Management Information
 							Systems, I am proficient in SQL, Python, data visualization, and ETL tools. Passionate about
 							translating complex data into actionable insights, I lead teams to drive data-driven
@@ -65,7 +65,7 @@
 				<ul class="statistics">
 					<li class="style1">
 						<span class="icon solid fa-suitcase"></span>
-						<strong>2 + </strong> Years' Experience
+						<strong>3</strong> Years' Experience
 					</li>
 					<li class="style2">
 						<span class="icon solid fa-database"></span>
